--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.contextPath=/boot
 # = log: use log4j.properties
 # =============================== 
 #logging.level.=INFO
-#logging.file=C:/eclipse/workspace/spring-boot/boot/boot.log
+#logging.file=F:\logs\kneel-boot.log
 
 # =============================== 
 # = Data Source
