--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,8 +1,8 @@
-log4j.rootLogger = INFO, ROOT,Console
+log4j.rootLogger = INFO,ROOT,Console
 
 #Log File
 log4j.appender.ROOT	= org.apache.log4j.DailyRollingFileAppender
-log4j.appender.ROOT.File = kneel-boot.log
+log4j.appender.ROOT.File =F:/logs/kneel-boot.log
 log4j.appender.ROOT.DatePattern	= '.'yyyy-MM-dd
 log4j.appender.ROOT.layout = org.apache.log4j.PatternLayout
 log4j.appender.ROOT.layout.ConversionPattern = %-5p: %d{ISO8601} [%t] [%c] %x - %m%n
