--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -35,7 +35,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
 #set database don't need to initialize.
 #case of the schema and insert SQLs just execute once,if you have any changes, you can open it.
-spring.datasource.initialize=false
+spring.datasource.initialize=true
 spring.datasource.schema=classpath:DML/schema.sql
 spring.datasource.data=classpath:DML/sys_codelookup.sql,classpath:DML/sys_privilege.sql,classpath:DML/sys_properties.sql,classpath:DML/sys_role_privilege.sql,classpath:DML/sys_role.sql,classpath:DML/sys_user_role.sql,classpath:DML/sys_user.sql
  
